--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Евгений Клопотенко - Кулинарные рецепты от Евгения Клопотенко</title>
-  <link rel="shortcut icon" href="../img/unnamed.jpg" type="image-x/icon">
+  <link rel="shortcut icon" href="./img/unnamed.jpg" type="image-x/icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https: //fonts.googleapis.com/css2? family= Montserrat:wght@500 & display=swap" rel="stylesheet">
@@ -98,10 +98,10 @@
   <div><a href="https://klopotenko.com/salat-s-ajvoj/"><img src="../img/1.jpeg.jpg" width="50%" height="50%"></a></div>
   <p><b>Вкусно и минимум калорий. Теплый салат с айвой и брюссельской</b></p>
   <div><a href="https://klopotenko.com/miks-gribov-i-sloenoe-testo-reczept-vkusnogo-piroga-s-gribami/"><img
-        src="../img/3.jpeg.jpg" width="50%" height="50%"></a></div>
+        src="./img/3.jpeg.jpg" width="50%" height="50%"></a></div>
   <p><b>Микс грибов и слоеное тесто: рецепт вкусного пирога с грибами</b></p>
   <div><a href="https://klopotenko.com/hurma-krevetki-i-sous-vinegret-vkusnyj-salat-k-prazdniku/"><img
-        src="../img/4.jpeg.jpg" width="50%" height="50%"></a></div>
+        src="./img/4.jpeg.jpg" width="50%" height="50%"></a></div>
   <p><b>Хурма, креветки и соус винегрет: вкусный салат к празднику</b></p>
   <script src="scripts.js"></script>
 </body>
