--- a/index.html
+++ b/index.html
@@ -1,109 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Евгений Клопотенко - Кулинарные рецепты от Евгения Клопотенко</title>
+    <link rel="shortcut icon" href="./img/unnamed.jpg" type="image-x/icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https: //fonts.googleapis.com/css2? family= Montserrat:wght@500 & display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Евгений Клопотенко - Кулинарные рецепты от Евгения Клопотенко</title>
-  <link rel="shortcut icon" href="./img/unnamed.jpg" type="image-x/icon">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https: //fonts.googleapis.com/css2? family= Montserrat:wght@500 & display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./styles.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <body>
+    <p>test</p>
+    <header>
+      <div class="top">
+        <div class="heading">
+          <h1>КЛОПОТЕНКО</h1>
+        </div>
+        <div class="search_wrapper">
+          <form class="search">
+            <input class="search_input" type="text" placeholder="Поиск..." />
+            <button class="search_button" type="submit"></button>
+          </form>
+        </div>
+        <div class="language">
+          <a href="#" class="lan">UA/RU</a>
+        </div>
+        <div class="dws">
+          <a href="#" class="course">ОНЛАЙН-КУРС</a>
+        </div>
+      </div>
+      <hr />
 
-</head>
+      <nav>
+        <ul>
+          <li>
+            <a href="https://klopotenko.com/cuisine/ukrainskaya/"
+              >УКРАИНСКАЯ КУХНЯ</a
+            >
+          </li>
+          <li>
+            <a href="https://klopotenko.com/recipes/">РЕЦЕПТЫ</a>
+            <ul>
+              <li><a href="#">Завтраки</a></li>
+              <li><a href="#">Салаты</a></li>
+              <li><a href="#">Супы</a></li>
+              <li><a href="#">Закуски</a></li>
+              <li><a href="#">Вторые блюда</a></li>
+            </ul>
+          </li>
 
-<body>
-  <header>
-    <div class="top">
-      <div class="heading">
-        <h1>КЛОПОТЕНКО</h1>
-      </div>
-      <div class="search_wrapper">
-        <form class="search">
-          <input class="search_input" type="text" placeholder="Поиск...">
-          <button class="search_button" type="submit"></button>
-        </form>
-      </div>
-      <div class="language">
-        <a href="#" class="lan">UA/RU</a>
-      </div>
-      <div class="dws">
-        <a href="#" class="course">ОНЛАЙН-КУРС</a>
-      </div>
+          <li>
+            <a href="https://klopotenko.com/c/shefsovety/">#СОВЕТЫКЛОПОТЕНКО</a>
+          </li>
+          <li>
+            <a href="https://klopotenko.com/chto-prigotovit-na-novyj-god/"
+              >РЕЦЕПТЫ НА НОВЫЙ ГОД</a
+            >
+            <ul>
+              <li><a href="#">Закуски на Новый год</a></li>
+              <li><a href="#">Мясные блюда на Новый год</a></li>
+              <li><a href="#">Новогодние блюда из рыбы</a></li>
+              <li><a href="#">Новогодние десерты</a></li>
+              <li><a href="#">Новогодние напитки</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="https://klopotenko.com/o-nas/">ШЕФ</a>
+            <ul>
+              <li><a href="#">Реклама и сотрудничество</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </li>
+
+          <li><a href="https://store.klopotenko.com/">ИНТЕРНЕТ-МАГАЗИН</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <div class="gamburger">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
-    <hr>
 
-
-    
-
-
-
-
-    <nav>
-      <ul>
-        <li><a href="https://klopotenko.com/cuisine/ukrainskaya/">УКРАИНСКАЯ КУХНЯ</a></li>
-        <li><a href="https://klopotenko.com/recipes/">РЕЦЕПТЫ</a>
-          <ul>
-            <li><a href="#">Завтраки</a></li>
-            <li><a href="#">Салаты</a></li>
-            <li><a href="#">Супы</a></li>
-            <li><a href="#">Закуски</a></li>
-            <li><a href="#">Вторые блюда</a></li>
-          </ul>
-        </li>
-
-        <li><a href="https://klopotenko.com/c/shefsovety/">#СОВЕТЫКЛОПОТЕНКО</a></li>
-        <li><a href="https://klopotenko.com/chto-prigotovit-na-novyj-god/">РЕЦЕПТЫ НА НОВЫЙ ГОД</a>
-          <ul>
-            <li><a href="#">Закуски на Новый год</a></li>
-            <li><a href="#">Мясные блюда на Новый год</a></li>
-            <li><a href="#">Новогодние блюда из рыбы</a></li>
-            <li><a href="#">Новогодние десерты</a></li>
-            <li><a href="#">Новогодние напитки</a></li>
-          </ul>
-        </li>
-
-        <li><a href="https://klopotenko.com/o-nas/">ШЕФ</a>
-          <ul>
-            <li><a href="#">Реклама и сотрудничество</a></li>
-            <li><a href="#">Контакты</a></li>
-          </ul>
-        </li>
-
-        <li><a href="https://store.klopotenko.com/">ИНТЕРНЕТ-МАГАЗИН</a></li>
-      </ul>
-    </nav>
- </header>
-
- 
- <div class="gamburger">
-  <span></span>
-  <span></span>
-  <span></span>
-</div>
-
-
-
-
-
-
-
-  <hr>
-  <h2>
-    НОВЫЕ РЕЦЕПТЫ
-  </h2>
-  <div><a href="https://klopotenko.com/salat-s-ajvoj/"><img src="../img/1.jpeg.jpg" width="50%" height="50%"></a></div>
-  <p><b>Вкусно и минимум калорий. Теплый салат с айвой и брюссельской</b></p>
-  <div><a href="https://klopotenko.com/miks-gribov-i-sloenoe-testo-reczept-vkusnogo-piroga-s-gribami/"><img
-        src="./img/3.jpeg.jpg" width="50%" height="50%"></a></div>
-  <p><b>Микс грибов и слоеное тесто: рецепт вкусного пирога с грибами</b></p>
-  <div><a href="https://klopotenko.com/hurma-krevetki-i-sous-vinegret-vkusnyj-salat-k-prazdniku/"><img
-        src="./img/4.jpeg.jpg" width="50%" height="50%"></a></div>
-  <p><b>Хурма, креветки и соус винегрет: вкусный салат к празднику</b></p>
-  <script src="scripts.js"></script>
-</body>
-
+    <hr />
+    <h2>НОВЫЕ РЕЦЕПТЫ</h2>
+    <div>
+      <a href="https://klopotenko.com/salat-s-ajvoj/"
+        ><img src="../img/1.jpeg.jpg" width="50%" height="50%"
+      /></a>
+    </div>
+    <p><b>Вкусно и минимум калорий. Теплый салат с айвой и брюссельской</b></p>
+    <div>
+      <a
+        href="https://klopotenko.com/miks-gribov-i-sloenoe-testo-reczept-vkusnogo-piroga-s-gribami/"
+        ><img src="./img/3.jpeg.jpg" width="50%" height="50%"
+      /></a>
+    </div>
+    <p><b>Микс грибов и слоеное тесто: рецепт вкусного пирога с грибами</b></p>
+    <div>
+      <a
+        href="https://klopotenko.com/hurma-krevetki-i-sous-vinegret-vkusnyj-salat-k-prazdniku/"
+        ><img src="./img/4.jpeg.jpg" width="50%" height="50%"
+      /></a>
+    </div>
+    <p><b>Хурма, креветки и соус винегрет: вкусный салат к празднику</b></p>
+    <script src="scripts.js"></script>
+  </body>
 </html>
